Bug 548480 - [10.6] crash [@ CFHash] SMTP password prompt with IME enabled; r=masayuki a=dveditz